welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value temps
  if(isSummer==true){if(temp<=100 && temps>=60){return true};return false}
                                     ^