welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if(isSummer==true){if(temp<=100 && temps>=60){return true};return false}
  if(temp>=60 && temp<=90){return true}
  return false}